src/objects/Record_Updater__c.object
<CustomObject>
    <description>To be used for updating any Object&apos;s individual field. Logic can be implemented in batch jobs to pull multiple fields for a given record and updated at once.</description>
    <fields>
        <fullName>Acted_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Record&apos;s action was completed. This is to be used to find out which actions already took place.</description>
        <label>Acted On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Upsert</fullName>
                </value>
                <value>
                    <fullName>Undelete</fullName>
                </value>
                <value>
                    <fullName>Insert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <description>Field Type of the field that needs to be acted on.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fieldname__c</fullName>
        <description>API of the Field Name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>API of the Field Name</inlineHelpText>
        <label>Fieldname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value of the field that should be used in the action.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Record Updater</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Updater</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>